Use right foreground role in Nepomuk2::TagCheckBox::m_label

BUG: 303875
FIXED-IN: 4.10
REVIEW: 108335